ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: britakin
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - host: services.k8s.community
      http:
        paths:
          - path: /britakin/hello
            backend:
              serviceName: hello-app
              servicePort: 8999
  tls:
    - hosts:
        - services.k8s.community
      secretName: tls-secret
